Projet_GL/src/test/deca/syntax/invalid/unprovided/bad_lvalue.deca
// affectation au this en lvalue.

class AssignToThis {
	void m() {
		AssignToThis test;
		this = test;
	}
}
